fix: improve title card spacing

--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -48,17 +48,18 @@
   margin: 8px 12px 1em
 
 .article-header
-  padding: 28px article-padding 0
+  padding: 32px article-padding 18px
 
 .article-title
   text-decoration: none
   font-size: 2.05em
   font-weight: bold
   color: color-default
-  line-height: 1.02
+  line-height: 1.18
   transition: color 0.2s
   font-family: font-serif
   text-transform: uppercase
+  margin: 0
   a&:hover
     color: color-link
 
